--- a/blog/package.json
+++ b/blog/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
+    "html-react-parser": "^4.0.0",
     "microcms-js-sdk": "^2.5.0",
     "next": "13.4.7",
     "react": "18.2.0",
