--- a/blog/package.json
+++ b/blog/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "html-react-parser": "^4.0.0",
+    "html-to-text": "^9.0.5",
     "microcms-js-sdk": "^2.5.0",
     "next": "13.4.7",
     "react": "18.2.0",
