--- a/blog/package.json
+++ b/blog/package.json
@@ -21,6 +21,7 @@
     "html-to-text": "^9.0.5",
     "microcms-js-sdk": "^2.5.0",
     "next": "13.4.7",
+    "placeholder": "^1.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
