--- a/blog/package.json
+++ b/blog/package.json
@@ -23,7 +23,8 @@
     "next": "13.4.7",
     "placeholder": "^1.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.32.1"
   },
   "volta": {
     "node": "16.20.1"
