--- a/blog/package.json
+++ b/blog/package.json
@@ -22,6 +22,7 @@
     "microcms-js-sdk": "^2.5.0",
     "next": "13.4.7",
     "placeholder": "^1.0.2",
+    "plaiceholder": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.32.1"
